code/practise/user-crud/sample0/postgres.yaml
# Deployment for PostgreSQL pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment     # Name of the PostgreSQL deployment
  namespace: default            # Namespace where the deployment will be created
spec:
  replicas: 1                   # Number of replicas (1 for single pod deployment)
  selector:
    matchLabels:
      app: postgres             # Label selector to match pods in the deployment
  template:
    metadata:
      labels:
        app: postgres           # Label for the pod template to identify it as part of the deployment
    spec:
      containers:
      - name: postgres
        image: postgres:15      # PostgreSQL container image (version 15)
        ports:
        - containerPort: 5432   # Port for PostgreSQL inside the container
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data  # Mount the persistent storage at this location in the container
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc  # Referencing the PVC created above

---
# Service to expose PostgreSQL to other pods within the cluster
apiVersion: v1
kind: Service
metadata:
  name: postgres-service        # Name of the PostgreSQL service
  namespace: default            # Namespace where the service will be created
spec:
  selector:
    app: postgres               # The service will target pods with this label
  ports:
    - port: 5432                # Port the service will expose
      targetPort: 5432          # The target port on the PostgreSQL container
  type: ClusterIP               # The service is only accessible within the cluster
